--- a/scrutiny/docker-compose.yml
+++ b/scrutiny/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       - "8086:8086" # influxDB admin
     volumes:
       - /run/udev:/run/udev:ro
-      - /volume1/docker/data/scrutiny:/opt/scrutiny/config
-      - /volume1/docker/data/scrutiny/influxdb:/opt/scrutiny/influxdb
+      - ${DATA}/scrutiny:/opt/scrutiny/config
+      - ${DATA}/scrutiny/influxdb:/opt/scrutiny/influxdb
     devices:
       - /dev/sda:/dev/sda
       - /dev/sdb:/dev/sdb
