--- a/dozzle/docker-compose.yml
+++ b/dozzle/docker-compose.yml
@@ -2,6 +2,9 @@ services:
   dozzle:
     container_name: dozzle
     image: amir20/dozzle:latest
+    environment:
+      - PUID=${PUID}
+      - PGID=${PGID}
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     ports:
