--- a/metube/docker-compose.yml
+++ b/metube/docker-compose.yml
@@ -1,12 +1,13 @@
 services:
   metube:
-    image: ghcr.io/alexta69/metube
     container_name: metube
+    image: ghcr.io/alexta69/metube
     environment:
       - UID=${PUID}
       - GID=${PGID}
-    restart: unless-stopped
+    volumes:
+      - ${DATA}/metube:/downloads
     ports:
       - ${PORT}:8081
-    volumes:
-      - ${DOWNLOADS}:/downloads
+    network_mode: bridge
+    restart: unless-stopped
