--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -1,13 +1,19 @@
 services:
-    watchtower:
-      image: containrrr/watchtower
-      container_name: watchtower
-      volumes:
-        - /var/run/docker.sock:/var/run/docker.sock
-      ports:
-        - ${PORT}:8080
-      environment:
-        WATCHTOWER_HTTP_API_TOKEN: ${API_TOKEN}
-        WATCHTOWER_HTTP_API_METRICS: true
-      network_mode: bridge
-      restart: unless-stopped
+  watchtower:
+    image: containrrr/watchtower
+    container_name: watchtower
+    environment:
+      - PGID=${PGID}
+      - PUID=${PUID}
+      - TZ=${TZ}
+      - WATCHTOWER_HTTP_API_METRICS=true
+      - WATCHTOWER_HTTP_API_TOKEN=${API_TOKEN}
+      - WATCHTOWER_CLEANUP=true
+      - WATCHTOWER_DISABLE_CONTAINERS=${CONTAINERS}
+      - WATCHTOWER_SCHEDULE=${SCHEDULE}
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    ports:
+      - ${PORT}:8080
+    network_mode: bridge
+    restart: unless-stopped
