fixed prowlarr docker compose

--- a/prowlarr/docker-compose.yml
+++ b/prowlarr/docker-compose.yml
@@ -10,6 +10,6 @@ services:
     volumes:
       - ${APPDATA}/prowlarr:/config
     ports:
-      - ${USER}:9696
+      - ${PORTS}:9696
     network_mode: bridge
     restart: unless-stopped
