changed default network to bridge

--- a/flaresolverr/docker-compose.yml
+++ b/flaresolverr/docker-compose.yml
@@ -7,5 +7,5 @@ services:
       - PGID=${PGID}
       - TZ=${TZ}
       - LOG_LEVEL=debug
-    network_mode: ${NETWORK}
+    network_mode: bridge
     restart: unless-stopped
