--- a/prowlarr/docker-compose.yml
+++ b/prowlarr/docker-compose.yml
@@ -11,5 +11,5 @@ services:
       - ${APPDATA}/prowlarr:/config
     ports:
       - ${PORT}:9696
-    network_mode: ${NETWORK}
+    network_mode: bridge
     restart: unless-stopped
