added flaresolver port

--- a/flaresolverr/docker-compose.yml
+++ b/flaresolverr/docker-compose.yml
@@ -7,5 +7,7 @@ services:
       - PGID=${PGID}
       - TZ=${TZ}
       - LOG_LEVEL=debug
+    ports:
+      - ${PORT}:8191
     network_mode: bridge
     restart: unless-stopped
