--- a/sonarr/docker-compose.yml
+++ b/sonarr/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   sonarr:
     container_name: sonarr
-    image: ghcr.io/hotio/sonarr:latest
+    image: ghcr.io/hotio/sonarr
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
@@ -12,5 +12,15 @@ services:
       - ${DATA}:/data    
     ports:
       - ${PORT}:8989
-    network_mode: bridge
+    networks: 
+      - my_default
+    networks: 
+      - my_default
+      - gluetun_default
     restart: unless-stopped
+
+networks:
+  my_default:
+    external: true
+  gluetun_default:
+    external: true
