removed latest tag

--- a/dozzle/docker-compose.yml
+++ b/dozzle/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   dozzle:
     container_name: dozzle
-    image: amir20/dozzle:latest
+    image: amir20/dozzle
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
