--- a/flaresolverr/docker-compose.yml
+++ b/flaresolverr/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
   flaresolverr:
     container_name: flaresolverr
-    image: ghcr.io/flaresolverr/flaresolverr:latest
+    image: ghcr.io/flaresolverr/flaresolverr
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
       - LOG_LEVEL=debug
-    ports:
-      - ${PORT}:8191
-    network_mode: bridge
+    # ports:
+    #   - ${PORT}:8191
+    network_mode: container:gluetun 
     restart: unless-stopped
