--- a/kometa/docker-compose.yml
+++ b/kometa/docker-compose.yml
@@ -6,10 +6,26 @@ services:
       - PUID=${PUID}
       - PGID=${PGID}
       - TZ=${TZ}
+      # - KOMETA_TESTS=true
+      # - KOMETA_RUN=true
+      # - KOMETA_METADATA_ONLY=true
+      # - KOMETA_COLLECTIONS_ONLY=true
+      # - KOMETA_PLAYLISTS_ONLY=true
+      # - KOMETA_OPERATIONS_ONLY=true
+      # - KOMETA_OVERLAYS_ONLY=true
       - KOMETA_TIMES=06:00
-#      - KOMETA_COLLECTIONS_ONLY=true
-#      - KOMETA_OVERLAYS_ONLY=true
-#      - KOMETA_RUN=true
+      - KOMETA_PLEX_IP=${KOMETA_PLEX_IP}
+      - KOMETA_PLEX_TKN=${KOMETA_PLEX_TKN}
+      - KOMETA_TMDB_API=${KOMETA_TMDB_API}
+      - KOMETA_TRAKT_ID=${KOMETA_TRAKT_ID}
+      - KOMETA_TRAKT_SECRET=${KOMETA_TRAKT_SECRET}
+      - KOMETA_TAUTULLI_IP=${KOMETA_TAUTULLI_IP}
+      - KOMETA_TAUTULLI_API=${KOMETA_TAUTULLI_API}
+      - KOMETA_RADARR_IP=${KOMETA_RADARR_IP}
+      - KOMETA_RADARR_API=${KOMETA_RADARR_API}
+      - KOMETA_SONARR_IP=${KOMETA_SONARR_IP}
+      - KOMETA_SONARR_API=${KOMETA_SONARR_API}
+      - KOMETA_WEBHOOK=${KOMETA_WEBHOOK}
     volumes:
       - ${APPDATA}/kometa:/config
     network_mode: bridge
