added to my_default network

--- a/recyclarr/docker-compose.yml
+++ b/recyclarr/docker-compose.yml
@@ -7,5 +7,10 @@ services:
     user: ${PUID}:${PGID}
     volumes:
       - ${APPDATA}/recyclarr:/config
-    network_mode: bridge
+    networks:
+      - my_default
     restart: unless-stopped
+
+networks:
+  my_default:
+    external: true
