--- a/peanut/docker-compose.yml
+++ b/peanut/docker-compose.yml
@@ -7,10 +7,8 @@ services:
       - PGID=${PGID}
       - NUT_HOST=${HOST_IP}
       - NUT_PORT=3493
-      - WEB_PORT=8080
+      - WEB_PORT=8800
       - USERNAME=${USERNAME}
       - PASSWORD=${PASSWORD}
-    ports:
-      - ${PORT}:8080
-    network_mode: bridge
+    network_mode: host
     restart: unless-stopped
