commented disable-containers

--- a/watchtower/docker-compose.yml
+++ b/watchtower/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - WATCHTOWER_HTTP_API_METRICS=true
       - WATCHTOWER_HTTP_API_TOKEN=${API_TOKEN}
       - WATCHTOWER_CLEANUP=true
-      - WATCHTOWER_DISABLE_CONTAINERS=${CONTAINERS}
+      # - WATCHTOWER_DISABLE_CONTAINERS=
       - WATCHTOWER_SCHEDULE=${SCHEDULE}
       - WATCHTOWER_NOTIFICATION_URL=${URL}
     volumes:
