--- a/example.env
+++ b/example.env
@@ -1,6 +1,28 @@
+#SERVER INFO
 PUID=
 PGID=
 TZ=
 APPDATA=
 DATA=
-PORT=
+
+#APPS
+PLEX_TKN=
+TMDB_API=
+MDBLIST_API=
+TAUTULLI_API=
+RADARR_API=
+SONARR_API=
+KOMETA_TRAKT_ID=
+KOMETA_TRAKT_SECRET=
+KOMETA_WEBHOOK=
+OVERSEERR_API=
+DOPLARR_DISCORD_TOKEN=
+
+#VPN
+VPN_PROVIDER=
+VPN_USERNAME=
+VPN_PASSWORD=
+VPN_SERVERCOUNTRIES=
+VPN_SERVERCITIES=
+PUBLICIP_API_TOKEN=
+TORRENT_PORT=
