--- a/metube/docker-compose.yml
+++ b/metube/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - GID=${PGID}
       - UMASK=002
     volumes:
-      - ${DATA}/downloads/metube:/downloads
+      - ${DATA}/downloads:/downloads
     ports:
       - 8081:8081
     network_mode: bridge
